# Team01-Qt

./: API_DOCUMENTATION.md  Car_1.pro  Makefile  README.md  install.sh  main.cpp  main.moc  main.qml  qml.qrc  radialbar.cpp
assets/: README.md
incs/: radialbar.h
sensor_daemon/: CMakeLists.txt  sensor_daemon.cpp
srcs/: CMakeLists.txt  Gauge.qml  main.cpp  main.qml  radialbar.cpp  sensor_daemon.cpp  uprotocol.h
